feat: added swagger doc for UpdateUserByID route
