# docs/swagger.yaml
@@ -9,6 +9,15 @@ definitions:
       message:
         type: string
     type: object
+  controller.CreateUserRequest:
+    properties:
+      age:
+        type: integer
+      email:
+        type: string
+      user_name:
+        type: string
+    type: object
   models.User:
     properties:
       age:
@@ -54,7 +63,7 @@ paths:
         name: request_body
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/controller.CreateUserRequest'
       produces:
       - application/json
       responses:
@@ -75,7 +84,7 @@ paths:
       - Users
   /users/{id}:
     get:
-      description: Get user's data by IF
+      description: Get user's data by ID
       parameters:
       - description: user id
         in: path
@@ -98,6 +107,38 @@ paths:
           schema:
             $ref: '#/definitions/controller.CommonError'
       summary: Get user by ID
+      tags:
+      - Users
+    put:
+      description: Update user's data by ID
+      parameters:
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: updated user data
+        in: body
+        name: request_body
+        required: true
+        schema:
+          $ref: '#/definitions/controller.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.CommonResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Update user by ID
       tags:
       - Users
 swagger: "2.0"
